# Sprforge

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.toml
dependencies/: CMakeLists.txt
dependencies/fmt/: CMakeLists.txt
dependencies/tomlplusplus/: CMakeLists.txt
src/: CMakeLists.txt  ItemsScrollableWindow.cpp  ItemsScrollableWindow.h  SpritesScrollableWindow.cpp  SpritesScrollableWindow.h  main.cpp
src/Helper/: DropManager.h  GUIHelper.cpp  GUIHelper.h  SavedData.cpp  SavedData.h
src/Misc/: Timer.h  Warninger.h  definitions.h  tools.h
src/ResourceManagers/: AssetsManager.cpp  AssetsManager.h  ConfigManager.cpp  ConfigManager.h
src/Things/: Item.cpp  Item.h  ItemType.cpp  ItemType.h  Items.cpp  Items.h  Thing.h
